# openfisca-mtest

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
experimentation/: atelier.py  courbe.py  documentation.md  test.py
openfisca_mtest/: __init__.py  entities.py
openfisca_mtest/parameters/impot/: bareme.yaml  index.yaml
openfisca_mtest/reforms/: add_dynamic_variable.py  add_new_tax.py
openfisca_mtest/tests/reforms/: add_dynamic_variable.yaml  add_new_tax.yaml  modify_social_security_taxation.yaml
openfisca_mtest/variables/: benefits.py  demographics.py  housing.py  impot.py  income.py  stats.py  taxes.py
